Fixed white space at the end

--- a/RWD/tribute-page/css/main.css
+++ b/RWD/tribute-page/css/main.css
@@ -8,10 +8,9 @@ body {
     margin: auto;
     padding-top: 20px;
     padding-bottom: 20px;
-    min-height: 100%;
+    min-height: 100vh;
     overflow: none;
 }
-
 
 #title {
     color: rgb(0, 0, 0);
